--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
     "app-root-path": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^9.0.2",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
     "morgan": "~1.9.1",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "xhr2": "^0.2.1"
   }
 }
