--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "ajv-formats": "^2.1.0",
     "app-root-path": "^3.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^9.0.2",
     "express": "~4.16.1",
