--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^3.4.1",
+    "firebase": "^8.6.5",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
