--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@syncfusion/ej2-react-grids": "^19.1.69",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -22,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-use": "^17.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
