--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,20 +4,29 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@date-io/date-fns": "^2.10.11",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@syncfusion/ej2-react-calendars": "^19.2.44",
     "@syncfusion/ej2-react-grids": "^19.1.69",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^3.4.1",
+    "date-fns": "^2.22.1",
     "firebase": "^8.6.5",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.2",
+    "react-calendar": "^3.4.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.4",
     "react-redux": "^7.2.4",
